trunk/Archive2/95/a2b2026e9f3a2f/output
main.cpp:5:17: warning: extra tokens at end of #include directive [enabled by default]
 #include <array>\n';
                 ^
main.cpp:5:19: warning: missing terminating ' character [enabled by default]
 #include <array>\n';
                   ^
main.cpp:23:18: warning: missing terminating ' character [enabled by default]
     std::cout << '
                  ^
main.cpp:23:5: error: missing terminating ' character
     std::cout << '
     ^
main.cpp:8:5: error: expected unqualified-id before 'for'
     for(auto& s: a3)
     ^
main.cpp: In function 'int main()':
main.cpp:24:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:24:1: error: expected ';' before '}' token
